veecle-os-runtime-macros/tests/ui/actor/unexpected_argument.stderr
error: only "Reader", "ExclusiveReader", "InitializedReader" and "Writer" arguments are allowed
 --> tests/ui/actor/unexpected_argument.rs:7:18
  |
7 |     _unexpected: u32,
  |                  ^^^

error: only "Reader", "ExclusiveReader", "InitializedReader" and "Writer" arguments are allowed
  --> tests/ui/actor/unexpected_argument.rs:13:40
   |
13 | async fn macro_test_actor(_unexpected: u32) -> veecle_os_runtime::Never {
   |                                        ^^^

error: only "Reader", "ExclusiveReader", "InitializedReader" and "Writer" arguments are allowed
  --> tests/ui/actor/unexpected_argument.rs:18:40
   |
18 | async fn macro_test_actor(_unexpected: <Foo as Bar>::Ty) -> veecle_os_runtime::Never {
   |                                        ^

error: only "Reader", "ExclusiveReader", "InitializedReader" and "Writer" arguments are allowed
  --> tests/ui/actor/unexpected_argument.rs:23:40
   |
23 | async fn macro_test_actor(_unexpected: [u32; 0]) -> veecle_os_runtime::Never {
   |                                        ^^^^^^^^
